--- a/public/style.css
+++ b/public/style.css
@@ -28,6 +28,16 @@ nav > a {
     color: var(--accent-color);
 }
 
+#login{
+  padding: 10px 10px;
+  background-color: #50c878;
+  border: 2px solid #50c878;
+  cursor: pointer;
+  width: 120px;
+  border-radius: 10px 10px;
+  outline: none;
+}
+
 section {
     display: flex;
 }
