--- a/public/style.css
+++ b/public/style.css
@@ -8,22 +8,13 @@ html {
   height: 100%;
 }
 
-body {
-  background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://cdn.discordapp.com/attachments/725789199932063786/726883899497513020/19744.jpg');
-  background-repeat: no-repeat;
+body, footer {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://cdn.discordapp.com/attachments/725789199932063786/726883899497513020/19744.jpg');
   background-position: center;
-  background-size: auto 100%;
-
+  background-size: 100% 100%;
   margin: 0;
   color: var(--dark-color);
   font-family: Arial, Helvetica, sans-serif;
-}
-
-footer{
-  background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://cdn.discordapp.com/attachments/725789199932063786/726883899497513020/19744.jpg');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
 }
 
 body p {
