some minor changes + fixes

--- a/public/style.css
+++ b/public/style.css
@@ -24,7 +24,7 @@ body p {
 
 nav {
   background-color: black;
-  color: black;
+  color: white;
   height: 3em;
   width: 100%;
   text-align: center;
